--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,58 +4,75 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "MyWebFont";
+  src: url("../assets/Cubic_11_1.013_R.woff2") format("woff2"),
+    url("../assets/Cubic_11_1.013_R.woff") format("woff");
+}
+
 :root {
-  --color_dgreen: #3cb500;
-  --color_yellow: #d0ff00;
+  --tw-bg2: #5b6fb4;
+  --dark-blue: #190cab;
+  --red: hsl(0, 63%, 48%);
+  --modal-bg: #ffd513;
+  --tw-bg: #f2d05a;
+  --blue: #2c6ac8;
+  --storke: #1b1a19;
 }
 
 body {
   width: 100%;
-  min-height: 100vh;
-  background-color: rgb(141, 102, 30);
+  font-family: "MyWebFont", Fallback, sans-serif;
+  cursor: url(../assets/cursor-hand.png) 2 2, pointer;
+  overflow: hidden;
 }
 
 svg {
-  height: 90vh; //vh是CSS3新單位 代表視窗高度百分比
+  max-width: 90%;
+  height: 90vh;
+  transform: translateX(40%) translateY(50px);
 }
 
 path {
-  stroke: #fff; //線條的背景是stroke
+  stroke: var(--storke); //線條的背景是stroke
+  stroke-width: 4.5;
   fill: transparent; //SVG的背景是fill
   transition: 0.4s;
-  cursor: pointer; //滑鼠移入出現手指
+
   &:hover {
-    fill: #fff;
+    fill: var(--blue);
     transform: translate(-5px, -5px);
   }
 }
 
-.rbox {
-  width: 460px;
-  position: absolute;
-  right: 150px;
-  top: 30px;
-  color: #fff;
-  font-size: 30px;
-  hr {
-    margin-top: 0px;
-    margin-bottom: red;
+#container {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--tw-bg);
+}
+
+@media screen and (max-width: 1400px) {
+  svg {
+    transform: translateY(50px);
   }
 }
 
-.box {
-  h4,
-  p {
-    margin: 0;
+@media screen and (max-width: 415px) {
+  svg {
+    transform: translateY(50px);
   }
-
-  h4 {
-    font-size: 34px;
+  .rbox {
+    padding: 10px;
+    height: 300px;
   }
-
-  p {
-    font-size: 20px;
+  .rbox h1 {
+    font-size: 28px;
+  }
+  .rbox h4 {
+    font-size: 25px;
   }
 }
 
-@import "./test";
+@import "./modal";
+@import "./sunny";
