--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,7 +49,7 @@ path {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: var(--tw-bg);
+  background-color: url(/tv.png);
 }
 
 @media screen and (max-width: 1400px) {
