--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,31 +12,41 @@
 
 :root {
   --stroke-fill: #5b6fb4;
-  --dark-blue: #190cab;
-  --red: hsl(0, 63%, 48%);
-  --modal-bg: rgb(255, 252, 214);
-  --tw-bg: #f2d05a;
+  --modal-bg: #fff;
   --blue: #2c6ac8;
   --storke: #1b1a19;
-  --tw-cyan: #01afae;
+  --tw-bg: #bef9f9;
+  --isClear: yellow;
+  --isSunnywithCloudy: #aff758;
+  --isOvercast: gray;
+  --isThunderstorm: #d33030;
+  --isRain: #4454d4;
+  --isSnowing: #ff66ff;
 }
 
 body {
   width: 100%;
   font-family: "MyWebFont", Fallback, sans-serif;
   cursor: url(../assets/cursor-hand.png) 2 2, pointer;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #container {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: #bef9f9;
-  // background-image: url(../assets/4.png);
+  background-color: var(--tw-bg);
+  background-image: url(../assets/tw-background.png);
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
+}
+
+@media (orientation: portrait) {
+  #container {
+    background-size: contain;
+    background-image: url(../assets/tw-vertical-background.png);
+  }
 }
 
 @import "./tw";
