Fix: Chang background image

--- a/styles/_tw.scss
+++ b/styles/_tw.scss
@@ -213,8 +213,9 @@ path {
   top: calc(50% - 114px);
   left: calc(50% + 155px);
   z-index: 3;
-  transform: translate(-50%, -50%);
+  display: none;
   height: 50px;
+  transform: translate(-50%, -50%);
 }
 
 .citySelector {
@@ -223,15 +224,16 @@ path {
   height: 300px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgb(126, 125, 122);
+  display: none;
   padding: 10px;
-  font-size: 1.5rem;
   border: 5px dashed;
   z-index: 2;
+  font-size: 1.5rem;
+  background-color: rgb(126, 125, 122);
+  transform: translate(-50%, -50%);
   overflow-y: scroll;
   overflow-x: hidden;
-  scrollbar-width: 5px;
+  scrollbar-width: thin;
   outline: 15px solid rgb(126, 125, 122);
   outline-offset: 0px;
   li {
@@ -239,6 +241,5 @@ path {
     list-style-type: none;
     padding-inline: 40px;
     margin-bottom: 5px;
-    transition: all 0.5s ease-in;
   }
 }
