--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,7 +36,7 @@ body {
   width: 100%;
   min-height: 100vh;
   background-color: var(--tw-bg);
-  background-image: url(../assets/tw-background.png);
+  background-image: url(../assets/tw-bg.png);
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
