--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -8,6 +8,10 @@
   animation: animatedBackground 75s linear infinite;
 }
 
+.now_place {
+  line-height: 40px;
+}
+
 .modal {
   display: none;
   position: absolute;
@@ -20,30 +24,28 @@
   color: rgb(23, 18, 18);
   font-size: 1.5em;
   backdrop-filter: blur(5px);
-  border-top: 5px solid black;
-  border-left: 5px solid black;
+  border-top: var(--black-border);
+  border-left: var(--black-border);
   box-shadow: 5px 5px black;
-  opacity: 0.9;
-  scale: 1;
   border-radius: 20px;
-  transition: all 0.5s ease-in-out;
 
   &.active {
     top: 50%;
     left: 50%;
     display: block;
     padding-top: 10px;
-    padding-left: 40px;
-    opacity: 0.9;
+    padding-inline: 35px;
+    opacity: 1;
     scale: 1;
     transform: translate(-50%, -50%);
-    transition: all 0.5s ease-in-out;
-    transform-origin: center;
     animation: 1.2s linear modalMotion;
   }
   hr {
     margin-block: 5px;
     margin-bottom: red;
+  }
+  h1 {
+    font-size: 50px;
   }
 }
 
@@ -92,7 +94,6 @@
 
 .weather {
   position: absolute;
-  bottom: 10px;
   right: 50px;
   background-color: transparent;
   width: 200px;
@@ -136,16 +137,21 @@
   }
 
   .modal h1 {
-    font-size: 28px;
+    font-size: 27px;
   }
   .modal h4 {
-    font-size: 25px;
+    font-size: 24px;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 390px) {
   .weather {
-    bottom: 50px;
     width: 100px;
+  }
+  .modal h1 {
+    font-size: 26px;
+  }
+  .modal h4 {
+    font-size: 23px;
   }
 }
