--- a/styles/_tw.scss
+++ b/styles/_tw.scss
@@ -208,34 +208,58 @@ path {
   }
 }
 
-#close {
-  position: fixed;
-  top: calc(50% - 114px);
-  left: calc(50% + 155px);
-  z-index: 3;
-  display: none;
-  height: 50px;
-  transform: translate(-50%, -50%);
-}
-
-.citySelector {
+.citySelector-container {
   position: absolute;
-  width: 400px;
+  z-index: 2;
+  display: none;
+  width: min(80%, 400px);
   height: 300px;
   top: 50%;
   left: 50%;
-  display: none;
+  transform: translate(-50%, -50%);
+}
+
+#close {
+  position: fixed;
+  top: 10px;
+  right: 25px;
+  z-index: 4;
+  height: 50px;
+}
+
+.citySelector {
+  z-index: 3;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   padding: 10px;
   border: 5px dashed;
-  z-index: 2;
   font-size: 1.5rem;
-  background-color: rgb(126, 125, 122);
-  transform: translate(-50%, -50%);
+  background-color: var(--selector-bg);
   overflow-y: scroll;
   overflow-x: hidden;
   scrollbar-width: thin;
-  outline: 15px solid rgb(126, 125, 122);
+  outline: 15px solid var(--selector-bg);
   outline-offset: 0px;
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    border-radius: 100vw;
+    background-color: var(--selector-bg);
+  }
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    border-radius: 100vw;
+    background-color: rgb(225, 225, 225);
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    border-radius: 100vw;
+    background: #555;
+  }
   li {
     width: 100%;
     list-style-type: none;
