Feax: Add arrow styles and meta

--- a/styles/_tw.scss
+++ b/styles/_tw.scss
@@ -267,3 +267,9 @@ path {
     margin-bottom: 5px;
   }
 }
+
+.arrow {
+  position: absolute;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
