--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-  --stroke-fill: #5b6fb4;
+  --stroke-fill: #2c6ac8;
   --modal-bg: #fff;
   --blue: #2c6ac8;
   --storke: #1b1a19;
@@ -84,13 +84,13 @@ path:hover {
 
 .click {
   position: absolute;
-  top: 35%;
-  left: 71.5%;
+  top: 36%;
+  left: 75%;
   z-index: 1;
 }
 
 .click>img {
-  width: 150px
+  width: 40%
 }
 
 .walking {
@@ -437,10 +437,45 @@ path:hover {
 }
 
 
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 1400px) {
+  #container {
+    background-image: url(../assets/backgrond-z2.png);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+  }
+
+
+  .title {
+    position: absolute;
+    top: 12%;
+    left: 10%;
+    -ms-writing-mode: tb-lr;
+    /* writing-mode: vertical-lr; */
+    font-size: 2.3rem;
+  }
+
+  .click {
+    position: absolute;
+    top: 42%;
+    left: 80%;
+    z-index: 1;
+  }
+
+  .click>img {
+    width: 50%
+  }
+}
+
+
+@media screen and (max-width: 1100px) {
   #container {
     background-size: contain;
     background-image: url(../assets/tw-vertical-background.png);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
   }
 
   .title {
@@ -466,20 +501,61 @@ path:hover {
 }
 
 
+@media screen and (max-width: 920px) {
+  #container {
+    background-size: contain;
+    background-image: url(../assets/tw-vertical-background.png);
+  }
 
+  .title {
+    position: absolute;
+    top: 6%;
+    left: 10%;
+    -ms-writing-mode: tb-lr;
+    /* writing-mode: vertical-lr; */
+    font-size: 2.3rem;
+  }
+
+  .click {
+    position: absolute;
+    top: 16%;
+    left: 12%;
+    z-index: 1;
+  }
+
+  .click>img {
+    width: 50%
+  }
+}
 
 
 
 @media screen and (max-width: 415px) {
-  svg {
-    transform: translateY(-40px);
-  }
-
   .walking {
     bottom: 0px;
     width: 80px;
     -webkit-animation: 2.5s linear walkingMotion_mobile infinite;
     animation: 2.5s linear walkingMotion_mobile infinite;
+  }
+
+  .title {
+    position: absolute;
+    top: 4%;
+    left: 10%;
+    -ms-writing-mode: tb-lr;
+    /* writing-mode: vertical-lr; */
+    font-size: 1.5rem;
+  }
+
+  .click {
+    position: absolute;
+    top: 15%;
+    left: 12%;
+    z-index: 1;
+  }
+
+  .click>img {
+    width: 30%
   }
 }
 
