--- a/styles/_tw.scss
+++ b/styles/_tw.scss
@@ -1,7 +1,7 @@
 svg {
   max-width: 90%;
   height: 90vh;
-  transform: translateX(40%) translateY(20px);
+  transform: translateX(40%) translateY(50px);
 }
 
 path {
@@ -18,8 +18,8 @@ path {
 
 .title {
   position: absolute;
-  top: 10%;
-  left: 5%;
+  top: 30%;
+  right: 5%;
   writing-mode: vertical-lr;
   font-size: 2rem;
 }
@@ -177,11 +177,10 @@ path {
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   80% {
     left: 80%;
     scale: 1;
-    transform: translateY(-70px);
+    transform: translateY(0px);
   }
 
   100% {
@@ -198,78 +197,12 @@ path {
 }
 @media screen and (max-width: 415px) {
   svg {
-    transform: translateY(-40px);
+    transform: translateY(50px);
   }
 
   .walking {
-    bottom: 0px;
+    bottom: 50px;
     width: 80px;
     animation: 2.5s linear walkingMotion_mobile infinite;
   }
-}
-
-.citySelector-container {
-  position: absolute;
-  z-index: 2;
-  display: none;
-  width: min(80%, 400px);
-  height: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#close {
-  position: fixed;
-  top: 10px;
-  right: 25px;
-  z-index: 4;
-  height: 50px;
-}
-
-.citySelector {
-  z-index: 3;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  border: 5px dashed;
-  font-size: 1.5rem;
-  background-color: var(--selector-bg);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scrollbar-width: thin;
-  outline: 15px solid var(--selector-bg);
-  outline-offset: 0px;
-  &::-webkit-scrollbar {
-    width: 15px;
-  }
-  /* Track */
-  &::-webkit-scrollbar-track {
-    border-radius: 100vw;
-    background-color: var(--selector-bg);
-  }
-  /* Handle */
-  &::-webkit-scrollbar-thumb {
-    border-radius: 100vw;
-    background-color: rgb(225, 225, 225);
-  }
-
-  /* Handle on hover */
-  &::-webkit-scrollbar-thumb:hover {
-    border-radius: 100vw;
-    background: #555;
-  }
-  li {
-    width: 100%;
-    list-style-type: none;
-    padding-inline: 40px;
-    margin-bottom: 5px;
-  }
-}
-
-.arrow {
-  position: absolute;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
 }
