--- a/styles/style.css
+++ b/styles/style.css
@@ -6,59 +6,41 @@
 
 @font-face {
   font-family: "MyWebFont";
-  src: url("../assets/Cubic_11_1.013_R.woff2") format("woff2"), url("../assets/Cubic_11_1.013_R.woff") format("woff");
+  src: url("../assets/Cubic_11_1.013_R.woff2") format("woff2"),
+    url("../assets/Cubic_11_1.013_R.woff") format("woff");
 }
-
 :root {
-  --stroke-fill: #2c6ac8;
-  --modal-bg: #fff;
+  --stroke-fill: #5b6fb4;
+  --dark-blue: #190cab;
+  --red: hsl(0, 63%, 48%);
+  --modal-bg: rgb(255, 252, 214);
+  --tw-bg: #f2d05a;
   --blue: #2c6ac8;
   --storke: #1b1a19;
-  --tw-bg: #bef9f9;
-  --isClear: yellow;
-  --isSunnywithCloudy: #aff758;
-  --isOvercast: gray;
-  --isThunderstorm: #d33030;
-  --isRain: #4454d4;
-  --isSnowing: #ff66ff;
-  --selector-bg: rgb(126, 125, 122);
-  --black-border: 5px solid black;
+  --tw-cyan: #01afae;
 }
 
 body {
   width: 100%;
   font-family: "MyWebFont", Fallback, sans-serif;
   cursor: url(../assets/cursor-hand.png) 2 2, pointer;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 #container {
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: #d4fdff;
-  background-image: url(../assets/backgrond-z.png);
+  min-height: 100vh;
+  background-color: #bef9f9;
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
-/* @media (orientation: portrait) {
-  #container {
-    background-size: contain;
-    background-image: url(../assets/tw-vertical-background.png);
-  }
-} */
 svg {
-  max-width: 90vw;
+  max-width: 90%;
   height: 90vh;
-  transform: translateX(0%) translateY(20px);
-}
-
-.svg-outside {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+  transform: translateX(40%) translateY(50px);
 }
 
 path {
@@ -67,7 +49,6 @@ path {
   fill: transparent;
   transition: 0.4s;
 }
-
 path:hover {
   fill: var(--stroke-fill);
   transform: translate(-5px, -5px);
@@ -75,22 +56,11 @@ path:hover {
 
 .title {
   position: absolute;
-  top: 12%;
-  left: 18%;
+  top: 30%;
+  right: 5%;
   -ms-writing-mode: tb-lr;
-  /* writing-mode: vertical-lr; */
-  font-size: 2.3rem;
-}
-
-.click {
-  position: absolute;
-  top: 36%;
-  left: 75%;
-  z-index: 1;
-}
-
-.click>img {
-  width: 40%
+  writing-mode: vertical-lr;
+  font-size: 2rem;
 }
 
 .walking {
@@ -101,7 +71,6 @@ path:hover {
   -webkit-animation: 7s linear walkingMotion infinite;
   animation: 7s linear walkingMotion infinite;
 }
-
 .walking img {
   width: 100%;
   -o-object-fit: contain;
@@ -114,121 +83,101 @@ path:hover {
     scale: 1;
     transform: translateY(0px);
   }
-
   5% {
     left: 5%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   10% {
     left: 10;
     scale: 1;
     transform: translateY(0px);
   }
-
   15% {
     left: 15%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   20% {
     left: 20%;
     scale: 1;
     transform: translateY(0px);
   }
-
   25% {
     left: 25%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   30% {
     left: 30%;
     scale: 1;
     transform: translateY(0px);
   }
-
   35% {
     left: 35%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   40% {
     left: 40%;
     scale: 1;
     transform: translateY(0px);
   }
-
   45% {
     left: 45%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   50% {
     left: 50%;
     scale: 1;
     transform: translateY(0px);
   }
-
   55% {
     left: 55%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   60% {
     left: 60%;
     scale: 1;
     transform: translateY(0px);
   }
-
   65% {
     left: 65%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   70% {
     left: 70%;
     scale: 1;
     transform: translateY(0px);
   }
-
   75% {
     left: 75%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   80% {
     left: 80%;
     scale: 1;
     transform: translateY(0px);
   }
-
   85% {
     left: 85%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   90% {
     left: 90%;
     scale: 1;
     transform: translateY(0px);
   }
-
   95% {
     left: 95%;
     scale: 1;
     transform: translateY(-50px);
   }
-
   100% {
     left: 100%;
     transform: translateY(0px);
@@ -241,394 +190,184 @@ path:hover {
     scale: 1;
     transform: translateY(0px);
   }
-
   5% {
     left: 5%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   10% {
     left: 10;
     scale: 1;
     transform: translateY(0px);
   }
-
   15% {
     left: 15%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   20% {
     left: 20%;
     scale: 1;
     transform: translateY(0px);
   }
-
   25% {
     left: 25%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   30% {
     left: 30%;
     scale: 1;
     transform: translateY(0px);
   }
-
   35% {
     left: 35%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   40% {
     left: 40%;
     scale: 1;
     transform: translateY(0px);
   }
-
   45% {
     left: 45%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   50% {
     left: 50%;
     scale: 1;
     transform: translateY(0px);
   }
-
   55% {
     left: 55%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   60% {
     left: 60%;
     scale: 1;
     transform: translateY(0px);
   }
-
   65% {
     left: 65%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   70% {
     left: 70%;
     scale: 1;
     transform: translateY(0px);
   }
-
   75% {
     left: 75%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   80% {
     left: 80%;
     scale: 1;
     transform: translateY(0px);
   }
-
   85% {
     left: 85%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   90% {
     left: 90%;
     scale: 1;
     transform: translateY(0px);
   }
-
   95% {
     left: 95%;
     scale: 1;
     transform: translateY(-50px);
   }
-
   100% {
     left: 100%;
     transform: translateY(0px);
   }
 }
-
 @-webkit-keyframes walkingMotion_mobile {
   0% {
     left: 0;
     transform: translateY(0px);
   }
-
   20% {
     left: 20%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   40% {
     left: 40%;
     scale: 1;
     transform: translateY(0px);
   }
-
   60% {
     left: 60%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   80% {
     left: 80%;
     scale: 1;
-    transform: translateY(-70px);
+    transform: translateY(0px);
   }
-
   100% {
     left: 100%;
     scale: 1.2;
     transform: translateY(0px);
   }
 }
-
 @keyframes walkingMotion_mobile {
   0% {
     left: 0;
     transform: translateY(0px);
   }
-
   20% {
     left: 20%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   40% {
     left: 40%;
     scale: 1;
     transform: translateY(0px);
   }
-
   60% {
     left: 60%;
     scale: 1.2;
     transform: translateY(-50px);
   }
-
   80% {
     left: 80%;
     scale: 1;
-    transform: translateY(-70px);
+    transform: translateY(0px);
   }
-
   100% {
     left: 100%;
     scale: 1.2;
     transform: translateY(0px);
   }
 }
-
-
-
 @media screen and (max-width: 1400px) {
-  #container {
-    background-image: url(../assets/backgrond-z2.png);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-  }
-
-
-  .title {
-    position: absolute;
-    top: 12%;
-    left: 10%;
-    -ms-writing-mode: tb-lr;
-    /* writing-mode: vertical-lr; */
-    font-size: 2.3rem;
-  }
-
-  .click {
-    position: absolute;
-    top: 42%;
-    left: 80%;
-    z-index: 1;
-  }
-
-  .click>img {
-    width: 50%
+  svg {
+    transform: translateY(50px);
   }
 }
-
-
-@media screen and (max-width: 1100px) {
-  #container {
-    background-size: contain;
-    background-image: url(../assets/tw-vertical-background.png);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-  }
-
-  .title {
-    position: absolute;
-    top: 6%;
-    left: 10%;
-    -ms-writing-mode: tb-lr;
-    /* writing-mode: vertical-lr; */
-    font-size: 2.3rem;
-  }
-
-  .click {
-    position: absolute;
-    top: 20%;
-    left: 12%;
-    z-index: 1;
-  }
-
-  .click>img {
-    width: 150px
-  }
-
-}
-
-
-@media screen and (max-width: 920px) {
-  #container {
-    background-size: contain;
-    background-image: url(../assets/tw-vertical-background.png);
-  }
-
-  .title {
-    position: absolute;
-    top: 6%;
-    left: 10%;
-    -ms-writing-mode: tb-lr;
-    /* writing-mode: vertical-lr; */
-    font-size: 2.3rem;
-  }
-
-  .click {
-    position: absolute;
-    top: 16%;
-    left: 12%;
-    z-index: 1;
-  }
-
-  .click>img {
-    width: 50%
-  }
-}
-
-
-
 @media screen and (max-width: 415px) {
+  svg {
+    transform: translateY(50px);
+  }
   .walking {
-    bottom: 0px;
+    bottom: 50px;
     width: 80px;
     -webkit-animation: 2.5s linear walkingMotion_mobile infinite;
     animation: 2.5s linear walkingMotion_mobile infinite;
   }
-
-  .title {
-    position: absolute;
-    top: 4%;
-    left: 10%;
-    -ms-writing-mode: tb-lr;
-    /* writing-mode: vertical-lr; */
-    font-size: 1.5rem;
-  }
-
-  .click {
-    position: absolute;
-    top: 15%;
-    left: 12%;
-    z-index: 1;
-  }
-
-  .click>img {
-    width: 30%
-  }
 }
-
-.citySelector-container {
-  position: absolute;
-  z-index: 2;
-  display: none;
-  width: min(80%, 400px);
-  height: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#close {
-  position: fixed;
-  top: 10px;
-  right: 25px;
-  z-index: 4;
-  height: 50px;
-}
-
-.citySelector {
-  z-index: 3;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  border: 5px dashed;
-  font-size: 1.5rem;
-  background-color: var(--selector-bg);
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scrollbar-width: thin;
-  outline: 15px solid var(--selector-bg);
-  outline-offset: 0px;
-  /* Track */
-  /* Handle */
-  /* Handle on hover */
-}
-
-.citySelector::-webkit-scrollbar {
-  width: 15px;
-}
-
-.citySelector::-webkit-scrollbar-track {
-  border-radius: 100vw;
-  background-color: var(--selector-bg);
-}
-
-.citySelector::-webkit-scrollbar-thumb {
-  border-radius: 100vw;
-  background-color: rgb(225, 225, 225);
-}
-
-.citySelector::-webkit-scrollbar-thumb:hover {
-  border-radius: 100vw;
-  background: #555;
-}
-
-.citySelector li {
-  width: 100%;
-  list-style-type: none;
-  padding-inline: 40px;
-  margin-bottom: 5px;
-}
-
-.arrow {
-  position: absolute;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
 .overlay {
   position: absolute;
   inset: 0;
@@ -638,10 +377,6 @@ path:hover {
   display: none;
   -webkit-animation: animatedBackground 75s linear infinite;
   animation: animatedBackground 75s linear infinite;
-}
-
-.now_place {
-  line-height: 40px;
 }
 
 .modal {
@@ -657,49 +392,93 @@ path:hover {
   font-size: 1.5em;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  border-top: var(--black-border);
-  border-left: var(--black-border);
+  border-top: 5px solid black;
+  border-left: 5px solid black;
   box-shadow: 5px 5px black;
+  opacity: 0.9;
+  scale: 1;
   border-radius: 20px;
+  transition: all 0.5s ease-in-out;
 }
-
 .modal.active {
   top: 50%;
   left: 50%;
   display: block;
   padding-top: 10px;
-  padding-inline: 35px;
-  opacity: 1;
+  padding-left: 40px;
+  opacity: 0.9;
   scale: 1;
   transform: translate(-50%, -50%);
+  transition: all 0.5s ease-in-out;
+  transform-origin: center;
   -webkit-animation: 1.2s linear modalMotion;
   animation: 1.2s linear modalMotion;
 }
-
 .modal hr {
   margin-block: 5px;
   margin-bottom: red;
 }
 
-.modal h1 {
-  font-size: 50px;
-}
-
 .box {
   padding-top: 10px;
 }
-
 .box h4,
 .box p {
   margin: 0;
 }
-
 .box h4 {
   font-size: 34px;
 }
-
 .box p {
   font-size: 20px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  cursor: grab;
+  scroll-behavior: smooth;
+}
+
+.arrow {
+  position: absolute;
+}
+
+li {
+  list-style-type: none;
+  padding-left: 40px;
+  padding-bottom: 20px;
+}
+
+/* li:hover::before {
+  content: "▶";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 10px;
+} */
+
+.citySelector {
+  position: absolute;
+  width: 400px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(126, 125, 122);
+  padding: 10px;
+  font-size: 1.5rem;
+  border: 5px dashed;
+  z-index: 2;
+  overflow-y: scroll;
+  overflow: auto;
+  scrollbar-width: thin;
+  display: none;
 }
 
 @-webkit-keyframes modalMotion {
@@ -707,16 +486,13 @@ path:hover {
     opacity: 0;
     transform: translate(-150%, -50%);
   }
-
   50% {
     opacity: 1;
     transform: translate(-110%, -50%);
   }
-
   75% {
     transform: translate(-55%, calc(-50% + 5px));
   }
-
   100% {
     transform: translate(-40%, -50%);
   }
@@ -727,48 +503,40 @@ path:hover {
     opacity: 0;
     transform: translate(-150%, -50%);
   }
-
   50% {
     opacity: 1;
     transform: translate(-110%, -50%);
   }
-
   75% {
     transform: translate(-55%, calc(-50% + 5px));
   }
-
   100% {
     transform: translate(-40%, -50%);
   }
 }
-
 @-webkit-keyframes animatedBackground {
   from {
     background-position: 0;
   }
-
   to {
     background-position: 2250px;
   }
 }
-
 @keyframes animatedBackground {
   from {
     background-position: 0;
   }
-
   to {
     background-position: 2250px;
   }
 }
-
 .weather {
   position: absolute;
+  bottom: 10px;
   right: 50px;
   background-color: transparent;
   width: 200px;
 }
-
 .weather img {
   width: 100%;
   height: 100%;
@@ -781,56 +549,126 @@ path:hover {
     padding-left: 30px;
   }
 }
-
 @media screen and (max-width: 700px) {
   .weather {
     width: 180px;
   }
 }
-
 @media screen and (max-width: 600px) {
   .modal.active {
     padding-left: 25px;
   }
-
   .weather {
     width: 150px;
     right: 50%;
     transform: translateX(50%);
   }
 }
-
 @media screen and (max-width: 415px) {
   .modal {
     padding: 10px;
     height: 300px;
   }
-
   .modal.active {
     padding-left: 20px;
   }
-
   .modal h1 {
-    font-size: 27px;
+    font-size: 28px;
   }
-
   .modal h4 {
-    font-size: 24px;
+    font-size: 25px;
   }
 }
-
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 400px) {
   .weather {
+    bottom: 50px;
     width: 100px;
   }
+}
+.circle {
+  position: absolute;
+  border-radius: 50%;
+  background: white;
+  -webkit-animation: ripple 15s infinite;
+  animation: ripple 15s infinite;
+  box-shadow: 0px 0px 1px 0px #508fb9;
+}
 
-  .modal h1 {
-    font-size: 26px;
+.small {
+  width: 200px;
+  height: 200px;
+  left: -100px;
+  bottom: -100px;
+}
+
+.medium {
+  width: 400px;
+  height: 400px;
+  left: -200px;
+  bottom: -200px;
+}
+
+.large {
+  width: 600px;
+  height: 600px;
+  left: -300px;
+  bottom: -300px;
+}
+
+.xlarge {
+  width: 800px;
+  height: 800px;
+  left: -400px;
+  bottom: -400px;
+}
+
+.xxlarge {
+  width: 1000px;
+  height: 1000px;
+  left: -500px;
+  bottom: -500px;
+}
+
+.shade1 {
+  opacity: 0.2;
+}
+
+.shade2 {
+  opacity: 0.5;
+}
+
+.shade3 {
+  opacity: 0.7;
+}
+
+.shade4 {
+  opacity: 0.8;
+}
+
+.shade5 {
+  opacity: 0.9;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    transform: scale(0.8);
   }
-
-  .modal h4 {
-    font-size: 23px;
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(0.8);
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+@keyframes ripple {
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(0.8);
+  }
+} /*# sourceMappingURL=style.css.map */
